--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <header>
   <title>This is title</title>
   <script src="plotly.js"></script>
+  <script src="websocketControl.js"></script>
   <script src="functions.js"></script>
   <link rel=¨stylesheet¨ type=¨text/css¨ href=¨stylesheet.css¨>
 </header>
